AC_INIT(configure.in)

sinclude(ScriptKit/path_guile.m4)

if test -z "$GNUSTEP_SYSTEM_ROOT"; then
  {
   echo "ERROR: You must run the GNUstep initialization script before configuring the gnustep-guile library!" 1>&2;
  exit 1; 
  }
fi

#--------------------------------------------------------------------
# Use a .h file with #define's, instead of -D command-line switches
#--------------------------------------------------------------------
AC_CONFIG_HEADER(config.h)

#--------------------------------------------------------------------
# The GNUstep root directory.
#--------------------------------------------------------------------
AC_PREFIX_DEFAULT(`echo $GNUSTEP_SYSTEM_ROOT`)
if test "x$prefix" = "x"; then
  prefix=$ac_default_prefix ;
fi

AC_PROG_CC
AC_PROG_CPP
AC_PATH_GUILE
AC_DEFINE_UNQUOTED(GUILE_VERSION, "$GUILE_VERSION")

save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS -I$GNUSTEP_SYSTEM_ROOT/Headers"
AC_CHECK_HEADERS(AppKit/AppKit.h)
AC_SUBST(ac_cv_header_AppKit_AppKit_h)
CPPFLAGS="$save_CPPFLAGS"

AC_CONFIG_SUBDIRS(Greg ScriptKit)
AC_OUTPUT(config.mak guile.make Test/GNUmakefile)
