# configure.in for GNUstep gnustep-guile
# Process this file with autoconf to produce a configure script.
#
# Copyright (C) 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
#
# Author:  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>
#
# This file is part of GReG, the GNUstep Regresion library for Guile.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Library General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
# 
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Library General Public License for more details.
#
# You should have received a copy of the GNU Library General Public
# License along with this library; see the file COPYING.LIB.
# If not, write to the Free Software Foundation,
# 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
#

AC_PREREQ(2.53)
# Ayers 27-03-2003: This file contains no real (known) features
# which require autoconf 2.53.  This was merely inserted to
# prevent configure to be regenarted with different versions
# of autoconf.  Maybe this file should be renamed to configure.ac. 

AC_INIT(configure.in)

sinclude(ScriptKit/path_guile.m4)

if test -z "$GNUSTEP_SYSTEM_ROOT"; then
  {
   echo "ERROR: You must run the GNUstep initialization script before configuring the gnustep-guile library!" 1>&2;
  exit 1; 
  }
fi

#--------------------------------------------------------------------
# Use a .h file with #define's, instead of -D command-line switches
#--------------------------------------------------------------------
AC_CONFIG_HEADER(config.h)

#--------------------------------------------------------------------
# The GNUstep root directory.
#--------------------------------------------------------------------
AC_PREFIX_DEFAULT(`echo $GNUSTEP_SYSTEM_ROOT`)
if test "x$prefix" = "x"; then
  prefix=$ac_default_prefix ;
fi

AC_PROG_CC
AC_PROG_CPP
AC_PATH_GUILE
AC_DEFINE_UNQUOTED(GUILE_VERSION, "$GUILE_VERSION")

save_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS -I$GNUSTEP_SYSTEM_ROOT/Headers -I$GNUSTEP_SYSTEM_ROOT/Headers/gnustep -I$GNUSTEP_SYSTEM_ROOT/Headers/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS"
AC_CHECK_HEADERS(AppKit/AppKit.h)
AC_SUBST(ac_cv_header_AppKit_AppKit_h)
AC_CHECK_HEADERS(EOControl/EOControl.h)
AC_SUBST(ac_cv_header_EOControl_EOControl_h)
AC_CHECK_HEADERS(EOAccess/EOAccess.h)
AC_SUBST(ac_cv_header_EOAccess_EOAccess_h)
AC_CHECK_HEADERS(EOInterface/EOInterface.h)
AC_SUBST(ac_cv_header_EOInterface_EOInterface_h)
CPPFLAGS="$save_CPPFLAGS"

AC_CONFIG_SUBDIRS(Greg ScriptKit)
AC_OUTPUT(AppKit.make EOF.make guile.make Library/gstep-guile.scm)
