dnl Process this file with autoconf to produce configure.

AC_INIT(Library/greg.c)
. ./GREG-VERSION

AC_CONFIG_HEADER(Library/config.h)

AC_PROG_CC
AC_PROG_CPP
AM_PROG_LIBTOOL

AC_ARG_WITH(guile-path,
           [  --with-guile-path=DIR   How to call guile], ,)

AC_PATH_PROG(GUILEPATH, guile, NONE, $PATH:$with_guile_path)
if test "$GUILEPATH" = "NONE"; then
  echo "********************************************************************"
  echo "You need guile in order to use this library. If it is not in your"
  echo "path, set the correct path by calling configure with --with-guile-path"
  echo "set to the correct path (e.g. configure --with-guile-path=/usr/bin/guile)"
  echo "********************************************************************"
  AC_ERROR(No guile found - cannot continue)
fi

AC_HEADER_STDC
AC_HEADER_TIME
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(libc.h limits.h malloc.h memory.h string.h signal.h sys/file.h sys/fcntl.h sys/ioctl.h sys/stropts.h unistd.h utime.h libguile.h)

AC_TYPE_GETGROUPS
AC_TYPE_SIGNAL
AC_TYPE_MODE_T

AC_CHECK_FUNCS(grantpt setpgid setsid tcgetpgrp tcsetpgrp waitpid)

HAVE_RECENT_GUILE=0
GUILE_LIB_PATH=
if test "$GUILEPATH" != "NONE"; then
  AC_MSG_CHECKING(whether we have a recent guile)
  HAVE_RECENT_GUILE=`$GUILEPATH -c '(display (if (string>? (version) "1.2") 1 0))'`
  if test $HAVE_RECENT_GUILE = 0; then
      AC_MSG_RESULT(no)
  else
      AC_MSG_RESULT(yes)
  fi
  GUILE_LIB_PATH=`$GUILEPATH -c '(display (string-append (%package-data-dir) "/" (version)))'`
fi

AC_DEFINE_UNQUOTED(HAVE_RECENT_GUILE, $HAVE_RECENT_GUILE)
AC_SUBST(HAVE_RECENT_GUILE)

AC_DEFINE_UNQUOTED(GUILE_LIB_PATH, $GUILE_LIB_PATH)

GUILE_BIN_PATH=$GUILE_LIB_PATH/greg
AC_DEFINE_UNQUOTED(GUILE_BIN_PATH, $GUILE_BIN_PATH)
AC_SUBST(GUILE_BIN_PATH)

GUILE_SCM_PATH=$GUILE_LIB_PATH/ice-9
AC_DEFINE_UNQUOTED(GUILE_SCM_PATH, $GUILE_SCM_PATH)
AC_SUBST(GUILE_SCM_PATH)

if test $HAVE_RECENT_GUILE = 1; then
GUILE_FLAGS
fi

AC_DEFINE_UNQUOTED(VERSION, $VERSION)
AC_SUBST(VERSION)
AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION)
AC_SUBST(MAJOR_VERSION)
AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION)
AC_SUBST(MINOR_VERSION)

AC_OUTPUT(Library/Makefile Library/greg Library/greg.scm Documentation/gregdoc config.mak)

